--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"name": "GlobalWatchlist",
 	"private": true,
 	"scripts": {
 		"start-storybook": "start-storybook -p 6006",
@@ -22,7 +23,7 @@
 		"@storybook/addon-docs": "6.3.9",
 		"@storybook/addon-storysource": "6.2.9",
 		"@storybook/addon-viewport": "6.2.9",
-		"@storybook/vue": "6.3.9",
+		"@storybook/vue": "6.4.18",
 		"@wdio/cli": "7.4.6",
 		"@wdio/dot-reporter": "7.4.2",
 		"@wdio/junit-reporter": "7.4.2",
@@ -30,9 +31,9 @@
 		"@wdio/mocha-framework": "7.13.2",
 		"@wdio/sync": "7.4.6",
 		"@wikimedia/wvui": "0.3.0",
-		"eslint-config-wikimedia": "0.21.0",
+		"eslint-config-wikimedia": "0.22.1",
 		"grunt-banana-checker": "0.9.0",
-		"jsdoc": "3.6.7",
+		"jsdoc": "3.6.10",
 		"jsdoc-wmf-theme": "0.0.3",
 		"storybook": "6.3.2",
 		"stylelint-config-wikimedia": "0.11.1",
@@ -40,7 +41,7 @@
 		"vue": "2.6.11",
 		"vue-loader": "15.9.3",
 		"vue-template-compiler": "2.6.11",
-		"wdio-mediawiki": "1.1.1",
+		"wdio-mediawiki": "1.2.0",
 		"webdriverio": "7.4.6"
 	},
 	"eslintIgnore": [
